# nsql1h26-lotr

./: .env  .env.example  .gitignore  README_v0.5.md  README_v0.8.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  entrypoint.sh  gunicorn.conf.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/apps/analytics/: constants.py  openapi.py  queries.py  repository.py  serializer.py  serializers.py  services.py  urls.py  utils.py  views.py
backend/apps/bulk/: apps.py  queries.py  repository.py  services.py  urls.py  views.py
backend/apps/catalogs/: apps.py  constants.py  filters.py  queries.py  serializers.py  services.py  urls.py  views.py
backend/apps/categories/: openapi.py  queries.py  repository.py  serializers.py  services.py  urls.py  utils.py  views.py
backend/apps/comments/: apps.py  queries.py  serializers.py  services.py  urls.py  views.py
backend/apps/meta/: apps.py  urls.py  views.py
backend/apps/pages/: apps.py  enums.py  models.py  queries.py  serializers.py  services.py  urls.py  views.py
backend/apps/pages/fixtures/: lotr_data.json
backend/apps/pages/management/commands/: seed.py
backend/apps/search/: apps.py  queries.py  serializers.py  services.py  urls.py  views.py
backend/apps/search/management/commands/: ensure_indexes.py
backend/apps/users/: admin.py  constants.py  models.py  permissions.py  queries.py  serializers.py  services.py  urls.py  urls_users.py  views.py
backend/apps/users/migrations/: 0001_initial.py  0002_user_avatar_url.py
backend/config/: exception_handler.py  urls.py
backend/config/settings/: base.py  dev.py  test.py
docs/: api-design.md  docker-setup.md  openapi.yml
frontend/: Dockerfile  README.md  index.html  nginx.conf  openapi.yml  orval.config.ts  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  main.tsx
frontend/src/api/: axios-instance.ts
frontend/src/components/: AddEntityModal.tsx  AddRelationForm.tsx  AdminDropdown.tsx  AnalyticsDropdown.tsx  AuthModal.tsx  ChangeEmailModal.tsx  ChangePasswordModal.tsx  EditProfileModal.tsx  ErrorModal.tsx  FilterSection.tsx  GenericCatalogPage.tsx  SearchBar.tsx  VisNetwork.tsx
frontend/src/context/: AuthContext.tsx  ToastContext.tsx
frontend/src/hooks/: useDebounce.ts
frontend/src/mocks/: categoriesTree.ts  categoryEntities.ts  handlers.ts
frontend/src/pages/: AdminPanelPage.tsx  AnalyticsPage.tsx  BulkExportPage.tsx  BulkImportPage.tsx  CategoriesPage.tsx  CharactersPage.tsx  CreateCategoryPage.tsx  CreatePage.tsx  CustomStatsPage.tsx  EditPage.tsx  EntityPage.tsx  EventsPage.tsx  GlobalStatsPage.tsx  GraphPage.tsx  HomePage.tsx  (+10 more)
hello_world/: README.md  docker-compose.yml
hello_world/src/: Dockerfile  requirements.txt
(+21 files in other folders)
