[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref==3.11.1",
    "attrs==26.1.0",
    "django==5.2.13",
    "django-cors-headers==4.9.0",
    "djangorestframework==3.17.1",
    "djangorestframework-simplejwt==5.5.1",
    "drf-spectacular==0.29.0",
    "gunicorn==25.3.0",
    "inflection==0.5.1",
    "jsonschema==4.26.0",
    "jsonschema-specifications==2025.9.1",
    "neo4j==6.1.0",
    "neomodel==6.1.0",
    "packaging==26.0",
    "pyjwt==2.12.1",
    "python-dotenv==1.2.2",
    "pytz==2026.1.post1",
    "pyyaml==6.0.3",
    "referencing==0.37.0",
    "rpds-py==0.30.0",
    "sqlparse==0.5.5",
    "typing-extensions==4.15.0",
    "uritemplate==4.2.0",
]


[tool.mypy]
python_version = "3.12"
strict = true
plugins = [
    "mypy_django_plugin.main",
    "mypy_drf_plugin.main",
]

[[tool.mypy.overrides]]
module = [
    "neomodel",
    "neomodel.*",
    "apps.pages.models",
    "apps.pages.models.*",
]
ignore_errors = true

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
exclude = [
    "apps/pages/models.py",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["test_*.py", "*_test.py"]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "django-stubs[compatible-mypy]==5.2.9",
    "djangorestframework-stubs[compatible-mypy]==3.16.9",
    "mypy>=1.13,<1.20",
    "ruff>=0.15.12",
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 88
indent-width = 4

target-version = "py312"
preview = true

[tool.ruff.lint]
# Мб переборщил, но че мы лохи что ли с ошибками сидеть))
select = [
    "F",
    "E",
    "W",
    "I",
    "N",
    "B",
    "UP",
    "C4",
    "SIM",
    "A",
    "DJ",
    "FIX",
    "LOG",
    "PT",
    "PLE",
    "PLW",
    "ARG",
]
# add "DOC", "D" ??
ignore = ["B905"]

fixable = ["ALL"]
unfixable = []

# Will allow unused variables if prefixed with underscode, idk yet
# dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = "dynamic"
